examples/errors/returns3.spl
foo(a) {
    if (False) {return 3;} else {return;}
}

main() {return;}